PR to fix Fork SVG color in dark mode #4312 (#4337)
* fixes Bug: Fork svg color in dark mode #4312

* fixed fork color in dark mode #4312

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1014,6 +1014,7 @@ ul.popular-tags li {
 
 .fork-count-svg {
     align-self: center;
+    fill: var(--fork-svg-fill);
 }
 
 @media screen and (max-width : 670px) {
